kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: frontend
        image: myfrontend-image:latest
        ports:
        - containerPort: 3000
      - name: service
        image: myservice-image:latest
        ports:
        - containerPort: 5000
